--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "duallutils"
-version = "1.3.1"
+version = "1.4.0"
 authors = ["silvioprog <silvioprog@gmail.com>"]
 edition = "2018"
 
@@ -13,3 +13,4 @@ lto = true
 [dependencies]
 libc = "0.2.66"
 rust-crypto = "0.2.36"
+opener = "0.4.1"
