--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,20 @@
 [package]
-name = "duallutils"
-version = "1.5.0"
-authors = ["silvioprog <silvioprog@gmail.com>"]
-edition = "2018"
+name = 'duallutils'
+version = '1.6.0'
+authors = ['silvioprog <silvioprog@gmail.com>']
+edition = '2018'
 
 [lib]
-crate-type = ["cdylib", "staticlib"]
-
+crate-type = [
+    'cdylib',
+    'staticlib',
+]
 [profile.release]
 lto = true
 
 [dependencies]
-libc = "0.2.66"
-rust-crypto = "0.2.36"
-opener = "0.4.1"
-single-instance = "0.1.1"
+libc = '0.2.66'
+rust-crypto = '0.2.36'
+opener = '0.4.1'
+single-instance = '0.1.1'
+system_shutdown = '1.0.1'
