--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = 'duallutils'
-version = '3.0.0'
+version = '3.1.0'
 authors = ['silvioprog <silvioprog@gmail.com>']
 edition = '2018'
 
@@ -18,3 +18,4 @@ rust-crypto = '0.2.36'
 opener = '0.4.1'
 single-instance = '0.1.1'
 system_shutdown = '3.0.0'
+lock_keys = '1.0.0'
