--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = 'duallutils'
-version = '3.3.1'
+version = '3.4.0'
 authors = ['silvioprog <silvioprog@gmail.com>']
 edition = '2018'
 
@@ -20,6 +20,7 @@ single-instance = '0.1.1'
 system_shutdown = '3.0.0'
 lock_keys = '1.0.0'
 sysinfo = '0.10.3'
+glob = '0.3.0'
 [target."cfg(windows)".dependencies.winapi]
 version = '0.3'
 features = [
