--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,24 @@
 [package]
-name = 'duallutils'
-version = '3.4.1'
-authors = ['silvioprog <silvioprog@gmail.com>']
-edition = '2018'
+name = "duallutils"
+version = "3.4.2"
+authors = ["silvioprog <silvioprog@gmail.com>"]
+edition = "2018"
 
 [lib]
-crate-type = [
-    'cdylib',
-    'staticlib',
-]
+crate-type = ["cdylib", "staticlib"]
+
 [profile.release]
 lto = true
 
 [dependencies]
-libc = '0.2.66'
-rust-crypto = '0.2.36'
-opener = '0.4.1'
-single-instance = '0.1.1'
-system_shutdown = '3.0.0'
-lock_keys = '1.0.0'
-sysinfo = '0.10.3'
-glob = '0.3.0'
-[target."cfg(windows)".dependencies.winapi]
-version = '0.3'
-features = [
-    'datetimeapi',
-    'sysinfoapi',
-    'winerror',
-]
+libc = "^0.2"
+rust-crypto = "^0.2"
+opener = "^0.4"
+single-instance = "^0.1"
+system_shutdown = "^3"
+lock_keys = "^1"
+sysinfo = "^0.14"
+glob = "^0.3"
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "^0.3", features = ["datetimeapi", "sysinfoapi", "winerror"] }
